# neural

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: main.yml
examples/: CMakeLists.txt
examples/mnist/: CMakeLists.txt
examples/mnist/src/: main.cpp
include/neural/: Net.hpp  Neural.hpp  Tensor.hpp
include/neural/initializers/: GlorotNormal.hpp  NormalInitializer.hpp
include/neural/layers/: Layer.hpp  Linear.hpp  Relu.hpp  Sigmoid.hpp  Softmax.hpp  Tanh.hpp
include/neural/losses/: CrossEntropy.hpp  MeanSquaredError.hpp
include/neural/optimizers/: Adam.hpp  Optimizer.hpp  OptimizerFactory.hpp  SGD.hpp
include/neural/util/: Gradient.hpp  Mapping.hpp  RNG.hpp
tests/: NeuralTests.cpp
